# Checape-v2

./: .gitcommittemplate  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 02-Data-Processing.ipynb
notebooks/exemples/: src-processors-text-formatter-example.ipynb
src/processors/: text_formatter.py
src/utils/: dataframe_utils.py
