[tool.poetry]
name = "checape-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "checape_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
jupyter = "^1.0.0"
spacy = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
