[tool.poetry]
name = "checape-v2"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"
packages = [{include = "checape_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = {extras = ["cuda11x", "lookups", "transformers"], version = "3.5.1"}
spacymoji = "3.0.1"
nltk = "3.8.1"
pt-core-news-lg = {url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.5.0/pt_core_news_lg-3.5.0-py3-none-any.whl"}
pandas = "2.0.3"
jupyter = "1.0.0"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
